# statscenter

./: .gitignore  BUILD_SPEC.md  DEPLOY.md  README.md  render.yaml  棒壘聯盟成績管理系統規格書.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: admin_leagues.py  auth.py  deps.py  games.py  leaderboards.py  media.py  players.py  reports.py  roster_import.py  roster_requests.py  schedule_import.py  seasons.py  teams.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: bootstrap_superadmin.py  seed.py  session.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  enums.py  game.py  materialized_views.py  misc.py  roster.py  tenancy.py
backend/app/schemas/: auth.py  batting.py  boxscore.py  game.py  leaderboard.py  league.py  media.py  pitching.py  player.py  player_stats.py  report.py  roster.py  roster_import.py  season.py  team.py  user.py  validate.py
backend/app/services/: boxscore.py  game_validation.py  leaderboard.py  materialized_views.py  player_stats.py  reports.py  roster_import.py  stats.py  (+2 more)
backend/tests/: conftest.py  rtba_sample.py  test_admin_leagues.py  test_auth.py  test_boxscore.py  test_constraints.py  test_health.py  test_leaderboards.py  test_media.py  test_migrations.py  test_player_detail.py  test_player_photo.py  test_player_stats.py  test_reports.py  test_roster_import.py  test_roster_requests.py  test_schedule_import.py  test_score_entry.py  test_seasons.py  test_seed.py  test_stats.py  test_teams_crud.py  test_tenant_isolation.py  test_user_accounts.py
(+49 files in other folders)
